@@ -198,6 +198,13 @@ form.enableUnlockProtection:load {
     action-client: plone-initLockingProtection;
 }
 
+/* disable lock refreshing when an inlineEditable field is reloaded
+   in view mode via AJAX (e.g. when Cancel is pressed) */
+div.inlineEditable:load {
+    evt-load-initial: false;
+    action-client: plone-removeLockProtection;
+}
+
 /*  Selector for the sharing page in plone.app.workflow.
     the search_term parameters, puts the needed info into the request
  */
